<resources>
    <string name="app_name">NCRM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="dashboard">Dashboard</string>
    <string name="contacts">Contacts</string>
    <string name="add_a_contact">Add a Contact</string>
    <string name="name">Name</string>
    <string name="organization">Organization</string>
    <string name="address_street">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="mobile_number">Mobile number</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="social_network">Social network</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="street_address">Street address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="add">Add</string>
    <string name="location">Location</string>
    <string-array name="countries">
        <item>Select</item>
        <item>Nepal</item>
        <item>Sweden</item>
        <item>United States</item>
    </string-array>
    <string name="update">Update</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="venue">Venue</string>
    <string name="at">At</string>
    <string name="with">With</string>
    <string name="participant">Participant</string>
    <string name="agenda">Agenda</string>
    <string name="meetings">Meetings</string>
    <string name="reminder">Reminder</string>
    <string name="targets">Targets</string>
    <string name="interaction">Interaction</string>
    <string name="file_title">File title</string>
    <string name="description">Description</string>
    <string name="select_file">Select File</string>
    <string name="upload">Upload</string>
    <string name="add_caps">ADD</string>
    <string name="update_caps">UPDATE</string>
    <string name="delete">Delete</string>
    <string name="upload_caps">UPLOAD</string>
    <string name="type">Type</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_type">Sort by Type</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="view_details">View details</string>
    <string name="upcoming_meetings">Upcoming meetings</string>
    <string name="reminders">Reminders</string>
    <string name="recent_files">Recent files</string>
    <string name="select">Select</string>
    <string name="subtitle">Customer relationship management</string>
    <string name="no_lat_lng_message">The address cannot be found in the map.</string>
    <string name="not_connected_to_network_message">You are not connected to the Internet. This app needs Internet to work.</string>
</resources>
