<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_viewDetails"
        android:orderInCategory="100"
        android:title="@string/view_details"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:title="@string/update"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sortByFileName"
        android:orderInCategory="100"
        android:title="@string/sort_by_name"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sortByFileType"
        android:orderInCategory="100"
        android:title="@string/sort_by_type"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sortByDate"
        android:orderInCategory="100"
        android:title="@string/sort_by_date"
        android:visible="false"
        app:showAsAction="never" />

</menu>
