<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/dashboard" />
    </group>

    <item android:title="Resources">
        <menu>
            <item
                android:id="@+id/nav_contacts"
                android:icon="@drawable/ic_menu_contacts"
                android:title="@string/contacts" />
            <item
                android:id="@+id/nav_meetings"
                android:icon="@drawable/ic_menu_contacts"
                android:title="@string/meetings" />
            <item
                android:id="@+id/nav_reminders"
                android:icon="@drawable/ic_menu_contacts"
                android:title="@string/reminder" />
            <item
                android:id="@+id/nav_files"
                android:icon="@drawable/ic_menu_contacts"
                android:title="Files" />
        </menu>
    </item>

    <group>
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_menu_close"
            android:title="@string/sign_out" />
    </group>

</menu>
